--- a/css/style.css
+++ b/css/style.css
@@ -50,3 +50,41 @@ body {
 h1{
     text-align: center;
 }
+
+#messages {
+    position: fixed;
+    left: 0;
+    top: 1;
+    width: 100%;
+    height: calc(100% - 50px);
+    overflow-y: auto;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.outer {
+    width: 100%;
+    margin-top: 10px;
+    display: flex;
+}
+
+#inner {
+    padding: 10px;
+    box-sizing: border-box;
+    border-radius: 10px;
+}
+
+.me {
+    background: white;
+    opacity: .5;
+    color: black;
+    font-weight: bold;
+
+}
+
+.notMe {
+    background: black;
+    opacity: .7;
+    color: #fff;
+    font-weight: bold;
+}
