--- a/css/style.css
+++ b/css/style.css
@@ -1,90 +1,90 @@
 body {
-	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
-	height: 100vh;
-    padding: 0;
-    margin: 0;
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 100vh;
+  padding: 0;
+  margin: 0;
 }
 
 @keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 #sendMsg {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 50px;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
 }
 
 #msgTxt {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: calc(100% - 100px);
-    height: 100%;
-    padding-left: 10px;
-    box-sizing: border-box;
-    border-radius: 10px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: calc(100% - 100px);
+  height: 100%;
+  padding-left: 10px;
+  box-sizing: border-box;
+  border-radius: 10px;
 }
 
 #msgBtn {
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 100px;
-    height: 100%;
-    border-radius: 10px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100px;
+  height: 100%;
+  border-radius: 10px;
 }
 
-h1{
-    text-align: center;
+h1 {
+  text-align: center;
+  color: whitesmoke;
 }
 
 #messages {
-    position: fixed;
-    left: 0;
-    top: 1;
-    width: 100%;
-    height: calc(100% - 50px);
-    overflow-y: auto;
-    padding: 10px;
-    box-sizing: border-box;
+  position: fixed;
+  left: 0;
+  top: 1;
+  width: 100%;
+  height: calc(100% - 50px);
+  overflow-y: auto;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 .outer {
-    width: 100%;
-    margin-top: 10px;
-    display: flex;
+  width: 100%;
+  margin-top: 10px;
+  display: flex;
 }
 
 #inner {
-    padding: 10px;
-    box-sizing: border-box;
-    border-radius: 10px;
+  padding: 10px;
+  box-sizing: border-box;
+  border-radius: 10px;
 }
 
 .me {
-    background: white;
-    opacity: .5;
-    color: black;
-    font-weight: bold;
-
+  background: white;
+  opacity: 0.8;
+  color: black;
+  font-weight: bold;
 }
 
 .notMe {
-    background: black;
-    opacity: .7;
-    color: #fff;
-    font-weight: bold;
+  background: black;
+  opacity: 0.8;
+  color: #fff;
+  font-weight: bold;
 }
