--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ body {
   padding-left: 10px;
   box-sizing: border-box;
   border-radius: 10px;
+  opacity: 0.8;
 }
 
 #msgBtn {
@@ -45,6 +46,7 @@ body {
   width: 100px;
   height: 100%;
   border-radius: 10px;
+  opacity: 0.8;
 }
 
 h1 {
