--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,8 @@ h1 {
   left: 0;
   top: 1;
   width: 100%;
-  height: calc(100% - 50px);
+  /* height: calc(100% - 50px); */
+  height: 60%;
   overflow-y: auto;
   padding: 10px;
   box-sizing: border-box;
