--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* En feature - animering av bakgrunden */
+/* Camillas feature - en animering av bakgrunden */
 body {
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   background-size: 400% 400%;
