--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-
-@import url('https://fonts.googleapis.com/css?family=Raleway:200');
+@import url("https://fonts.googleapis.com/css?family=Raleway:200");
 
 /* En feature - animering av bakgrunden */
 
@@ -11,6 +10,7 @@ body {
   height: 100vh;
   padding: 0;
   margin: 0;
+  overflow: hidden; /* Hide scrollbars */
 }
 
 @keyframes gradient {
@@ -66,24 +66,34 @@ body {
 
 h1 {
   width: 35vw;
-  padding: .2em;
+  padding: 0.2em;
   text-align: center;
   margin: 20px auto;
   color: whitesmoke;
   --borderWidth: 7px;
-  background: #1D1F20;
+  background: #1d1f20;
   position: relative;
   border-radius: var(--borderWidth);
 }
 
 h1:after {
-  content: '';
+  content: "";
   position: absolute;
   top: calc(-1 * var(--borderWidth));
   left: calc(-1 * var(--borderWidth));
   height: calc(100% + var(--borderWidth) * 2);
   width: calc(100% + var(--borderWidth) * 2);
-  background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
+  background: linear-gradient(
+    60deg,
+    #f79533,
+    #f37055,
+    #ef4e7b,
+    #a166ab,
+    #5073b8,
+    #1098ad,
+    #07b39b,
+    #6fba82
+  );
   border-radius: calc(2 * var(--borderWidth));
   z-index: -1;
   animation: animatedgradient 3s ease alternate infinite;
@@ -91,15 +101,15 @@ h1:after {
 }
 
 @keyframes animatedgradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 #messages {
@@ -124,7 +134,6 @@ h1:after {
   padding: 10px;
   box-sizing: border-box;
   border-radius: 10px;
-
 }
 
 .me {
