--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
   height: 100vh;
   padding: 0;
   margin: 0;
-  overflow: hidden; /* Hide scrollbars */
+  overflow: hidden; /* Hide 1 scrollbar */
 }
 
 @keyframes gradient {
